// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`titresEtapesAreasUpdate > met à jour les communes, forêts et zone du SDOM sur une étape 1`] = `
[
  {
    "administrationsLocales": [],
    "archive": false,
    "communes": [
      {
        "id": "97312",
        "surface": 716357,
      },
      {
        "id": "97358",
        "surface": 292012,
      },
    ],
    "contenu": null,
    "date": "2022-03-09",
    "dateDebut": null,
    "dateFin": null,
    "decisionsAnnexesContenu": null,
    "decisionsAnnexesSections": null,
    "duree": null,
    "forets": [
      "DBR",
    ],
    "heritageContenu": null,
    "heritageProps": null,
    "id": "titreEtapeIdUniquePourMiseAJourAreas",
    "incertitudes": null,
    "ordre": 0,
    "sdomZones": [
      "1",
    ],
    "secteursMaritime": [],
    "slug": "titreDemarcheIdUniquePourMiseAJourAreas-mfr99",
    "statutId": "aco",
    "substances": [],
    "surface": null,
    "titreDemarcheId": "titreDemarcheIdUniquePourMiseAJourAreas",
    "typeId": "mfr",
  },
]
`;

exports[`titresEtapesAreasUpdate > met à jour les communes, forêts et zone du SDOM sur une étape 2`] = `
[
  {
    "administrationsLocales": [],
    "archive": false,
    "communes": [
      {
        "id": "97312",
        "surface": 716357,
      },
      {
        "id": "97358",
        "surface": 292012,
      },
    ],
    "contenusTitreEtapesIds": null,
    "coordonnees": null,
    "doublonTitreId": null,
    "entreprisesLecture": false,
    "forets": [
      "DBR",
    ],
    "id": "titreIdUniquePourMiseAJourAreas",
    "nom": "nom-titreIdUniquePourMiseAJourAreas",
    "pointsEtape": {
      "administrationsLocales": [],
      "archive": false,
      "communes": [
        {
          "id": "97312",
          "surface": 716357,
        },
        {
          "id": "97358",
          "surface": 292012,
        },
      ],
      "contenu": null,
      "date": "2022-03-09",
      "dateDebut": null,
      "dateFin": null,
      "decisionsAnnexesContenu": null,
      "decisionsAnnexesSections": null,
      "duree": null,
      "forets": [
        "DBR",
      ],
      "heritageContenu": null,
      "heritageProps": null,
      "id": "titreEtapeIdUniquePourMiseAJourAreas",
      "incertitudes": null,
      "ordre": 0,
      "sdomZones": [
        "1",
      ],
      "secteursMaritime": [],
      "slug": "titreDemarcheIdUniquePourMiseAJourAreas-mfr99",
      "statutId": "aco",
      "substances": [],
      "surface": null,
      "titreDemarcheId": "titreDemarcheIdUniquePourMiseAJourAreas",
      "typeId": "mfr",
    },
    "propsTitreEtapesIds": {
      "points": "titreEtapeIdUniquePourMiseAJourAreas",
    },
    "publicLecture": false,
    "references": [],
    "sdomZones": [
      "1",
    ],
    "secteursMaritime": [],
    "slug": "slug-titreIdUniquePourMiseAJourAreas",
    "titreStatutId": "val",
    "typeId": "arm",
  },
]
`;
